[package]
name = "teeming_rocket"
version = "0.1.0"
authors = ["Mifour <dufour.thomas@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fern = { version = "0.5", features = ["colored"] }
log = "0.4"
rocket = "0.4.4"
